--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -49,6 +49,14 @@
       <p>Learn about Marina Standards</p>
     </ion-col>
   </ion-row>
+
+  <ion-row class="imagebuttonrow">
+      <ion-col col-4>
+        <img src="./assets/img/bmi.png" />
+        <p>Calculate your BMI</p>
+      </ion-col>
+     
+    </ion-row>
   
 </ion-grid>
 
