--- a/src/pages/facts/facts.html
+++ b/src/pages/facts/facts.html
@@ -14,7 +14,9 @@
 
 
 <ion-content >
-
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
   <img src="./assets/img/facts.jpeg" />
 
   <div>
