--- a/src/pages/offers/offers.html
+++ b/src/pages/offers/offers.html
@@ -14,30 +14,28 @@
 
 
 <ion-content >
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
 
-  <ion-card *ngFor="let item of items">
+  <ion-card *ngFor="let item of items" (click)="go(item)">
 
-    <img src="{{item.image}}">
-    <ion-fab right top>
-      <button ion-fab>
-        <ion-icon name="pin"></ion-icon>
-      </button>
-    </ion-fab>
+    <img src="http://dilukangelo.westus.cloudapp.azure.com:3001{{item.thumbnail}}">
+    
 
     <ion-item>
       <ion-icon name="football" item-left large></ion-icon>
       <h2>{{item.title}}</h2>
-      <p>{{item.des}}</p>
+      <p class="discount">{{item.slogan}}</p>
     </ion-item>
 
 
 
     <ion-item>
-      <span item-left>Valid Till</span>
-      <span item-left>August 26th</span>
-      <button ion-button icon-left clear item-right>
+     
+      <button ion-button icon-left clear item-right (click)="go(item)">
         <ion-icon name="navigate"></ion-icon>
-        Get Offer
+        View Offer
       </button>
     </ion-item>
 
