--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -13,18 +13,20 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content >
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+      </ion-refresher>
 
   <ion-grid>
     <ion-row wrap>
 
       <ion-col col-6 *ngFor="let item of products">
 
-        <ion-card style="height: 300px;width: 100%;">
-          <img src="{{item.image}}" height="230"/>
-          <h2 style="text-align: center;margin-top: 3px;">{{item.name}}</h2>
-          <h2 style="text-align: center;">{{item.price}}</h2>
+        <ion-card  class="bg" (click)="go(item)">
+          <img src="http://dilukangelo.westus.cloudapp.azure.com:3001{{item.thumbnail[0]}}" height="230"/>
+          <h2 >{{item.title}}</h2>
+         
         </ion-card>
 
       </ion-col>
