--- a/src/pages/recepies/recepies.html
+++ b/src/pages/recepies/recepies.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar color="danger">
     <ion-title>Recepies</ion-title>
   </ion-navbar>
 
